fix: scrollable tabs, remove hardware tab on mobile

--- a/src/style/bridge.scss
+++ b/src/style/bridge.scss
@@ -1,20 +1,4 @@
-$handle-extent: 24px;
-
-@keyframes autofill {
-  to {
-    color: #000;
-    background: transparent;
-  }
-}
-
-/* avoid yellow autofill highlight on browsers that respect this attribute */
-input:-webkit-autofill {
-  animation-name: autofill;
-  animation-fill-mode: both;
-
-  -webkit-animation-name: autofill;
-  -webkit-animation-fill-mode: both;
-}
+$handle-extent: 24px; // $lh-regular
 
 // min-height the top elements so footer behavior works correctly
 html {
