--- a/src/style/indigo-proposals.scss
+++ b/src/style/indigo-proposals.scss
@@ -48,3 +48,11 @@
 .arial {
   font-family: Arial, monospace;
 }
+
+.scroll-x {
+  overflow-x: auto;
+}
+
+.hidden-y {
+  overflow-y: hidden;
+}
